// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectSessionButton snapshot renders default button 1`] = `
<Button
  as="a"
  disabled={false}
  href="resumeUrl"
  onClick={[MockFunction mockOpenSessionModal]}
>
  Resume
</Button>
`;

exports[`SelectSessionButton snapshot renders disabled button when user does not have access to the course 1`] = `
<Button
  as="a"
  disabled={true}
  href="resumeUrl"
  onClick={[MockFunction mockOpenSessionModal]}
>
  Resume
</Button>
`;
